package com.iesvdc.acceso.zapateria.zapapp.modelos;

public enum Estado {
    CARRITO, REALIZADO, PREPARANDO, ENVIADO, COMPLETADO, INCIDENCIA
}
