package com.iesvdc.acceso.zapateria.zapapp.modelos;

public enum Rol {
    OPERARIO, CLIENTE, GESTOR
}
